--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-maps": "0.28.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
@@ -44,6 +45,9 @@
     "@types/dateformat": "^3.0.1",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-dotenv": "^0.2.0",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "react-native-dotenv": "^3.2.0",
     "redux-devtools-extension": "^2.13.9",
     "typescript": "~4.0.0"
   },
